--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "svelte": "^3.52.0",
+    "svelte-loading-spinners": "^0.3.4",
+    "svelte-simple-datatables": "^0.2.3",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "gridjs": "^5.1.0",
+    "gridjs-svelte": "^2.1.1",
+    "svelte-table": "^0.5.2"
   }
 }
