--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-SQLAlchemy==1.4.47
-dataset==1.5.2
 Flask==3.0.1
 Flask-Cors==3.0.10
-progress==1.6
 Flask-SocketIO==5.3.4
+Flask-Caching==2.3.0
+SQLAlchemy==1.4.47
+dataset==1.5.2
+progress==1.6
 requests==2.31.0
